segundo trabajo pagina colores

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         
 
         <div class="contenido1">
+            <h2>TITULO</h2>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet excepturi non repudiandae velit quia cupiditate dolor voluptatem magnam, neque quaerat officiis quam possimus similique facere vitae. Atque ad cupiditate eveniet.
             </p>
@@ -32,6 +33,7 @@
         </div>
 
         <div class="contenido2">
+            <h2>TITULO</h2>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet excepturi non repudiandae velit quia cupiditate dolor voluptatem magnam, neque quaerat officiis quam possimus similique facere vitae. Atque ad cupiditate eveniet.
             </p>
@@ -39,6 +41,7 @@
         </div>
 
         <div class="contenido3">
+            <h2>TITULO</h2>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet excepturi non repudiandae velit quia cupiditate dolor voluptatem magnam, neque quaerat officiis quam possimus similique facere vitae. Atque ad cupiditate eveniet.
             </p>
@@ -46,6 +49,7 @@
         </div>
 
         <div class="contenido4">
+            <h2>TITULO</h2>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet excepturi non repudiandae velit quia cupiditate dolor voluptatem magnam, neque quaerat officiis quam possimus similique facere vitae. Atque ad cupiditate eveniet.
             </p>
