--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </ol>
         </nav>
 
-        <div class="bordeizq">
+        <div class="bordeder">
             
         </div>
         
